@@ -1,7 +1,12 @@
-Tue Jul 05 12:58:05 2005  Loic Dachary  <loic@gnu.org>
+Tue Jul 05 17:00:05 2005  Loic Dachary  <loic@gnu.org>
 
 	* Release 1.0.4
 	
+	* pokerclient2d/lobby.c (handle_lobby): show icon marking
+	  tables where player is seated.
+
+Tue Jul 05 12:58:05 2005  Loic Dachary  <loic@gnu.org>
+
 	* poker-network.pc.in: pkg-config compatibility
 
 Mon Jul 04 10:15:57 2005  Loic Dachary  <loic@gnu.org>
